--- a/models/covid.ipynb
+++ b/models/covid.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-20 14:12:14.116365: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-08-20 14:12:14.142632: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-08-20 14:12:14.584379: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\" # Uncomment to disable GPU\n",
@@ -16,47 +27,63 @@
     "os.chdir(f\"{__ORIG_WD__}/../data_collectors/\")\n",
     "from covid19_genome import Covid19Genome\n",
     "\n",
-    "\n",
-    "os.chdir(__ORIG_WD__)\n",
-    "\n"
+    "os.chdir(__ORIG_WD__)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-20 14:12:15.108095: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.123411: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.123571: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.124931: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.125066: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.125154: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.486540: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.486653: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.486707: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-20 14:12:15.486758: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 21429 MB memory:  -> device: 0, name: NVIDIA RTX A5000, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
-    "covid19_genome = Covid19Genome()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lineages = covid19_genome.getLocalLineages(0)\n",
-    "lineages.sort()\n",
-    "dataset = []\n",
-    "def get_dataset(lower, upper):\n",
-    "    for lineage in lineages[lower:upper]:\n",
-    "        dataset.append((lineage, covid19_genome.getLocalAccessionsPath(lineage)))\n",
-    "    return dataset\n",
-    "\n",
-    "portions = {\n",
-    "    DatasetName.trainset.name: 0.8,\n",
-    "    DatasetName.validset.name: 0.1,\n",
-    "    DatasetName.testset.name: 0.1\n",
-    "}\n",
-    "\n",
-    "dataset = get_dataset(0, 200)\n",
-    "\n",
     "try:\n",
-    "    model = Model(\"covid19-200\")\n",
-    "    model.create_datasets(dataset, portions, minhash_dataset=True)\n",
+    "    model = load_model(\"covid19-reads-1024examples\")\n",
     "except Exception:\n",
-    "    model = load_model(\"covid19-200\")\n"
+    "    covid19_genome = Covid19Genome()\n",
+    "    lineages = covid19_genome.getLocalLineages(1024)\n",
+    "    lineages.sort()\n",
+    "    dataset = []\n",
+    "    def get_dataset(lower, upper):\n",
+    "        for lineage in lineages[lower:upper]:\n",
+    "            dataset.append((lineage, covid19_genome.getLocalAccessionsPath(lineage)))\n",
+    "        return dataset\n",
+    "\n",
+    "    portions = {\n",
+    "        DatasetName.trainset.name: 0.8,\n",
+    "        DatasetName.validset.name: 0.1,\n",
+    "        DatasetName.testset.name: 0.1\n",
+    "    }\n",
+    "\n",
+    "    dataset = get_dataset(0, 200)\n",
+    "    model = Model(\"covid19-reads-1024examples\")\n",
+    "    model.create_datasets(dataset, portions, minhash_dataset=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coverage = 2\n",
+    "ml_model_depth = 4"
    ]
   },
   {
@@ -65,72 +92,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try:\n",
-    "model.add_ml_model(\"vit\", \"vit.1.200.01.adamw.coverage1\", hps={\n",
-    "    \"optimizer\": {\n",
-    "        \"name\": \"AdamW\",\n",
-    "        \"params\": {\n",
-    "            \"learning_rate\": 0.001,\n",
+    "def get_model_name(ml_model_depth, coverage):\n",
+    "    return f\"vit.{ml_model_depth}.{coverage}x\"\n",
+    "\n",
+    "ml_model_name = get_model_name(ml_model_depth, coverage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newly_added = True\n",
+    "try: \n",
+    "    model.add_ml_model(\"vit\", ml_model_name, hps={\n",
+    "        \"optimizer\": {\n",
+    "            \"name\": \"AdamW\",\n",
+    "            \"params\": {\n",
+    "                \"learning_rate\": 0.001,\n",
+    "            },\n",
     "        },\n",
-    "    },\n",
-    "    \"encoder_repeats\": 1,\n",
-    "    \"batch_size\": 1024,\n",
-    "    \"regularizer\": {\n",
-    "        \"name\": \"l2\",\n",
-    "        \"params\": {\n",
-    "            \"l2\": 0.08\n",
-    "        }\n",
-    "    },\n",
-    "    \"d_key\": 64,\n",
-    "    \"d_value\": 64,\n",
-    "    \"dropout\": 0.3,\n",
-    "})\n",
-    "# except Exception:\n",
-    "    # print(\"Model already exists\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.list_ml_models()\n",
-    "# model.remove_ml_model(model.list_ml_models()[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.transfer('vit.1.50.001.adamw.coverage05','vit.1.50.004.adamw.coverage1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.change_ml_hps(\n",
-    "    \"vit.2.50.004.adamw.coverage05\",\n",
-    "    {\n",
-    "        # \"optimizer\": {\n",
-    "        #     \"name\": \"AdamW\",\n",
-    "        #     \"params\": {\n",
-    "        #         \"learning_rate\": 0.0004,\n",
-    "        #     },\n",
-    "        # },\n",
+    "        \"encoder_repeats\": 2,\n",
+    "        \"batch_size\": 256,\n",
     "        \"regularizer\": {\n",
     "            \"name\": \"l2\",\n",
     "            \"params\": {\n",
-    "                \"l2\": 0.02\n",
-    "            },\n",
+    "                \"l2\": 0.0003\n",
+    "            }\n",
     "        },\n",
-    "    }\n",
-    ")"
+    "        \"d_key\": 128,\n",
+    "        \"d_value\": 128,\n",
+    "        \"d_ff\": 1024+256,\n",
+    "        \"dropout\": 0.2,\n",
+    "    })\n",
+    "\n",
+    "except:\n",
+    "    newly_added = False\n",
+    "    print(\"Model already exists\")"
    ]
   },
   {
@@ -139,16 +138,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.set_coverage(1)\n",
-    "model.train(\"vit.1.200.01.adamw.coverage1\", epochs=1000)"
+    "models = model.list_ml_models()\n",
+    "print(models)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -156,7 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.add_examples(get_dataset(200, 500), portions)"
+    "if newly_added:\n",
+    "    assert False, \"Please consider doing transfer learning\"\n",
+    "    # model.transfer(\"vit.2.00001.adamw.coverage2\", \"vit.2.00001.adamw.coverage1\", False)"
    ]
   },
   {
@@ -164,7 +158,100 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# model.change_ml_hps(ml_model_name, {\n",
+    "#     \"regularizer\": {\n",
+    "#         \"name\": \"l2\",\n",
+    "#         \"params\": {\n",
+    "#             \"l2\": 0.00005,\n",
+    "#         },\n",
+    "#     },\n",
+    "#     \"optimizer\": {\n",
+    "#         \"name\": \"AdamW\",\n",
+    "#         \"params\": {\n",
+    "#             \"learning_rate\": 0.00001,\n",
+    "#         },\n",
+    "#     },\n",
+    "#     # \"batch_size\": 320,\n",
+    "# })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.set_coverage(coverage)\n",
+    "model.set_substitution_rate(0.01)\n",
+    "model.set_insertion_rate(0.005)\n",
+    "model.train(ml_model_name, epochs=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = model.predict_reads(ml_model_name, \"../genome_builder/data/reads-4x/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid19_genome = Covid19Genome()\n",
+    "lineages = covid19_genome.getLocalLineages(1024)\n",
+    "lineages.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accession_to_lineage_map = {}\n",
+    "for lineage in lineages:\n",
+    "    accessions = covid19_genome.getLocalAccessions(lineage)\n",
+    "    for accession in accessions:\n",
+    "        accession_to_lineage_map.update({accession.split(\"/\")[-1].split(\".\")[0]: lineage})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "correct = 0\n",
+    "incorrect = 0\n",
+    "labels = model.datasets[\"trainset\"].get_labels()\n",
+    "for result in results:\n",
+    "    print(tf.math.top_k(results[result],  k = 1))\n",
+    "    result_index = tf.math.top_k(results[result],  k = 1).indices.numpy()[0][0]\n",
+    "    print(labels[result_index])\n",
+    "    print(f\"real result: {accession_to_lineage_map[reads_accession]}\")\n",
+    "    reads_accession = result.split(\"/\")[-1].split(\".\")[0]\n",
+    "    if labels[result_index] == accession_to_lineage_map[reads_accession]:\n",
+    "        correct += 1\n",
+    "    else:\n",
+    "        incorrect += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct"
+   ]
   }
  ],
  "metadata": {
@@ -183,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.17"
   },
   "orig_nbformat": 4
  },
