--- a/models/covid.ipynb
+++ b/models/covid.ipynb
@@ -9,10 +9,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-20 14:12:14.116365: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-08-20 14:12:14.142632: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-08-28 13:34:47.779802: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-08-28 13:34:47.807050: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-08-20 14:12:14.584379: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-08-28 13:34:48.254054: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -21,6 +21,7 @@
     "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\" # Uncomment to disable GPU\n",
     "from model import Model, DatasetName, load_model, remove_model\n",
     "import numpy as np\n",
+    "import glob\n",
     "\n",
     "__ORIG_WD__ = os.getcwd()\n",
     "\n",
@@ -34,27 +35,84 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_dataset():\n",
+    "    # extract accession paths\n",
+    "    accessions_paths = glob.glob(\"../genome_builder/data/new-reads-4x/*.fq\")\n",
+    "    accessions_paths = [os.path.abspath(accessions_path) for accessions_path in accessions_paths]\n",
+    "\n",
+    "\n",
+    "    # extract lineages\n",
+    "    covid19_genome = Covid19Genome()\n",
+    "    lineages = covid19_genome.getLocalLineages(1024)\n",
+    "    lineages.sort()\n",
+    "\n",
+    "    # build accession lineage map\n",
+    "    accession_lineage_map = {}\n",
+    "    for lineage in lineages:\n",
+    "        for accession in covid19_genome.getLocalAccessions(lineage):\n",
+    "            accession_lineage_map[accession] = lineage\n",
+    "\n",
+    "    # build lineage accession path map\n",
+    "    lineage_accession_path_map = {}\n",
+    "    for accession_path in accessions_paths:\n",
+    "        accession = accession_path.split('/')[-1].split('.')[0].split('-')[0]\n",
+    "        lineage = accession_lineage_map[accession]\n",
+    "        if not lineage in lineage_accession_path_map:\n",
+    "            lineage_accession_path_map[lineage] = []\n",
+    "        lineage_accession_path_map[lineage].append(accession_path)\n",
+    "\n",
+    "    return [(lineage, accession_paths) for lineage, accession_paths in lineage_accession_path_map.items()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_name = f\"covid19-art-1024examples\"\n",
+    "# try:\n",
+    "#     model = load_model(model_name)\n",
+    "# except Exception:\n",
+    "#     dataset = build_dataset()\n",
+    "\n",
+    "#     portions = {\n",
+    "#         DatasetName.trainset.name: 0.8,\n",
+    "#         DatasetName.validset.name: 0.1,\n",
+    "#         DatasetName.testset.name: 0.1\n",
+    "#     }\n",
+    "\n",
+    "#     model = Model(\"covid19-art-1024examples\")\n",
+    "#     model.create_datasets(dataset, portions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-20 14:12:15.108095: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.123411: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.123571: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.124931: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.125066: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.125154: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.486540: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.486653: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.486707: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-08-20 14:12:15.486758: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 21429 MB memory:  -> device: 0, name: NVIDIA RTX A5000, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "2023-08-28 13:34:51.175096: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.192395: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.192534: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.193612: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.193700: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.193746: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.562250: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.562358: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.562412: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-08-28 13:34:51.562463: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1639] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22325 MB memory:  -> device: 0, name: NVIDIA RTX A5000, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    model = load_model(\"covid19-reads-1024examples\")\n",
+    "    model = load_model(\"covid19-new-1024examples\")\n",
     "except Exception:\n",
     "    covid19_genome = Covid19Genome()\n",
     "    lineages = covid19_genome.getLocalLineages(1024)\n",
@@ -72,23 +130,45 @@
     "    }\n",
     "\n",
     "    dataset = get_dataset(0, 200)\n",
-    "    model = Model(\"covid19-reads-1024examples\")\n",
-    "    model.create_datasets(dataset, portions, minhash_dataset=True)"
+    "    model = Model(\"covid19-new-1024examples\")\n",
+    "    model.create_datasets(model.get_ds_types()[0], dataset, portions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'d_model': 'required', 'd_val': 'required', 'd_key': 'required', 'd_ff': 'required', 'heads': 'required', 'dropout_rate': 'optional', 'regularizer': 'optional', 'initializer': 'optional', 'activation': 'optional', 'encoder_repeats': 'required', 'labels': 'required'}\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "{'coverage': 5, 'read_length': 128, 'frag_len': 128, 'num_frags': 256}\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.get_ml_model_structures()\n",
+    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[0]))\n",
+    "print(\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")\n",
+    "print(model.get_ds_props())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coverage = 2\n",
-    "ml_model_depth = 4"
+    "coverage = 4\n",
+    "ml_model_depth = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,33 +180,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'d_model': 'required', 'd_val': 'required', 'd_key': 'required', 'd_ff': 'required', 'heads': 'required', 'dropout_rate': 'optional', 'regularizer': 'optional', 'initializer': 'optional', 'activation': 'optional', 'encoder_repeats': 'required', 'labels': 'required'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model already exists\n"
+     ]
+    }
+   ],
    "source": [
     "newly_added = True\n",
-    "try: \n",
-    "    model.add_ml_model(\"vit\", ml_model_name, hps={\n",
+    "try:\n",
+    "    model.add_ml_model(ml_model_name, hps={\n",
+    "        \"structure\": model.get_ml_model_structures()[0],\n",
+    "        \"d_model\": model.get_ds_props()[\"frag_len\"],\n",
+    "        \"d_val\": 128,\n",
+    "        \"d_key\": 128,\n",
+    "        \"heads\": 8,\n",
+    "        \"d_ff\": 1024+256,\n",
+    "        \"labels\":  len(model.get_labels()),\n",
+    "        \"activation\": \"relu\",\n",
     "        \"optimizer\": {\n",
     "            \"name\": \"AdamW\",\n",
     "            \"params\": {\n",
     "                \"learning_rate\": 0.001,\n",
     "            },\n",
     "        },\n",
-    "        \"encoder_repeats\": 2,\n",
-    "        \"batch_size\": 256,\n",
+    "        \"encoder_repeats\": ml_model_depth,\n",
     "        \"regularizer\": {\n",
     "            \"name\": \"l2\",\n",
     "            \"params\": {\n",
-    "                \"l2\": 0.0003\n",
+    "                \"l2\": 0.0001\n",
     "            }\n",
     "        },\n",
-    "        \"d_key\": 128,\n",
-    "        \"d_value\": 128,\n",
-    "        \"d_ff\": 1024+256,\n",
     "        \"dropout\": 0.2,\n",
     "    })\n",
-    "\n",
     "except:\n",
     "    newly_added = False\n",
     "    print(\"Model already exists\")"
@@ -134,23 +242,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['vit.1.4x']\n"
+     ]
+    }
+   ],
    "source": [
     "models = model.list_ml_models()\n",
-    "print(models)\n"
+    "print(models)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "if newly_added:\n",
     "    assert False, \"Please consider doing transfer learning\"\n",
-    "    # model.transfer(\"vit.2.00001.adamw.coverage2\", \"vit.2.00001.adamw.coverage1\", False)"
+    "# model.transfer(get_model_name(ml_model_depth - 1, coverage), ml_model_name, False)"
    ]
   },
   {
@@ -160,31 +276,31 @@
    "outputs": [],
    "source": [
     "# model.change_ml_hps(ml_model_name, {\n",
-    "#     \"regularizer\": {\n",
-    "#         \"name\": \"l2\",\n",
-    "#         \"params\": {\n",
-    "#             \"l2\": 0.00005,\n",
-    "#         },\n",
-    "#     },\n",
-    "#     \"optimizer\": {\n",
-    "#         \"name\": \"AdamW\",\n",
-    "#         \"params\": {\n",
-    "#             \"learning_rate\": 0.00001,\n",
-    "#         },\n",
-    "#     },\n",
-    "#     # \"batch_size\": 320,\n",
+    "# #     \"regularizer\": {\n",
+    "# #         \"name\": \"l2\",\n",
+    "# #         \"params\": {\n",
+    "# #             \"l2\": 0.00005,\n",
+    "# #         },\n",
+    "# #     },\n",
+    "# #     \"optimizer\": {\n",
+    "# #         \"name\": \"AdamW\",\n",
+    "# #         \"params\": {\n",
+    "# #             \"learning_rate\": 0.00001,\n",
+    "# #         },\n",
+    "# #     },\n",
     "# })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.set_coverage(coverage)\n",
-    "model.set_substitution_rate(0.01)\n",
-    "model.set_insertion_rate(0.005)\n",
+    "# model.set_coverage(coverage)\n",
+    "# model.set_substitution_rate(0.025)\n",
+    "# model.set_insertion_rate(0.015)\n",
+    "# model.set_deletion_rate(0.015)\n",
     "model.train(ml_model_name, epochs=1000)"
    ]
   },
@@ -194,7 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = model.predict_reads(ml_model_name, \"../genome_builder/data/reads-4x/\")"
+    "results = model.predict_reads(ml_model_name, \"../genome_builder/data/new-reads-4x/\")"
    ]
   },
   {
@@ -233,11 +349,14 @@
     "incorrect = 0\n",
     "labels = model.datasets[\"trainset\"].get_labels()\n",
     "for result in results:\n",
-    "    print(tf.math.top_k(results[result],  k = 1))\n",
+    "    # print(tf.math.top_k(results[result],  k = 1))\n",
     "    result_index = tf.math.top_k(results[result],  k = 1).indices.numpy()[0][0]\n",
     "    print(labels[result_index])\n",
+    "    reads_accession = result.split(\"/\")[-1].split(\".\")[0].split(\"-\")[0]\n",
+    "    if reads_accession not in accession_to_lineage_map:\n",
+    "        continue\n",
     "    print(f\"real result: {accession_to_lineage_map[reads_accession]}\")\n",
-    "    reads_accession = result.split(\"/\")[-1].split(\".\")[0]\n",
+    "    \n",
     "    if labels[result_index] == accession_to_lineage_map[reads_accession]:\n",
     "        correct += 1\n",
     "    else:\n",
@@ -250,8 +369,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "correct"
+    "print(f\"accurcay = {correct / (correct + incorrect)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "incorrect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_model_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
