--- a/models/covid.ipynb
+++ b/models/covid.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training covid models\n",
+    "### This notebook is an example usage of how to use the model alongside the covid-data-collector in order to train, evaluate and test the model\n",
+    "#### In this notebook you will find example usages on how to use the core functionalities of the model "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import third party modules, and also the data_collector: covid19_genome and the model module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -8,9 +26,9 @@
    "source": [
     "import os\n",
     "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\" # Uncomment to disable GPU\n",
-    "from model import Model, DatasetName, load_model, remove_model\n",
-    "import numpy as np\n",
     "import glob\n",
+    "\n",
+    "from model import Model, DatasetName, load_model, remove_model\n",
     "\n",
     "__ORIG_WD__ = os.getcwd()\n",
     "\n",
@@ -21,38 +39,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def build_dataset():\n",
-    "    # extract accession paths\n",
-    "    accessions_paths = glob.glob(\"../genome_builder/data/new-reads-4x/*.fq\")\n",
-    "    accessions_paths = [os.path.abspath(accessions_path) for accessions_path in accessions_paths]\n",
+    "#### Create a model, or try to load it, if it was already have been created.\n",
     "\n",
+    "In order to use the model, the first thing you have to do is provide it with a dataset (with the help of the data_collector). In the following cell you are provided with an example that create the dataset.\n",
     "\n",
-    "    # extract lineages\n",
-    "    covid19_genome = Covid19Genome()\n",
-    "    lineages = covid19_genome.getLocalLineages(1024)\n",
-    "    lineages.sort()\n",
-    "\n",
-    "    # build accession lineage map\n",
-    "    accession_lineage_map = {}\n",
-    "    for lineage in lineages:\n",
-    "        for accession in covid19_genome.getLocalAccessions(lineage):\n",
-    "            accession_lineage_map[accession] = lineage\n",
-    "\n",
-    "    # build lineage accession path map\n",
-    "    lineage_accession_path_map = {}\n",
-    "    for accession_path in accessions_paths:\n",
-    "        accession = accession_path.split('/')[-1].split('.')[0].split('-')[0]\n",
-    "        lineage = accession_lineage_map[accession]\n",
-    "        if not lineage in lineage_accession_path_map:\n",
-    "            lineage_accession_path_map[lineage] = []\n",
-    "        lineage_accession_path_map[lineage].append(accession_path)\n",
-    "\n",
-    "    return [(lineage, accession_paths) for lineage, accession_paths in lineage_accession_path_map.items()]"
+    "You should note that when you are creating the dataset, you are passing the dataset type. You can obtain the available dataset types in the system by calling the model class function ```get_ds_types()```"
    ]
   },
   {
@@ -61,37 +56,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model_name = f\"covid19-art-1024examples\"\n",
-    "# try:\n",
-    "#     model = load_model(model_name)\n",
-    "# except Exception:\n",
-    "#     dataset = build_dataset()\n",
+    "model_name = \"covid19-1024examples\"\n",
     "\n",
-    "#     portions = {\n",
-    "#         DatasetName.trainset.name: 0.8,\n",
-    "#         DatasetName.validset.name: 0.1,\n",
-    "#         DatasetName.testset.name: 0.1\n",
-    "#     }\n",
-    "\n",
-    "#     model = Model(\"covid19-art-1024examples\")\n",
-    "#     model.create_datasets(dataset, portions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "try:\n",
-    "    model = load_model(\"covid19-new-1024examples\")\n",
+    "    model = load_model(model_name)\n",
     "except Exception:\n",
     "    covid19_genome = Covid19Genome()\n",
     "    lineages = covid19_genome.getLocalLineages(1024)\n",
     "    lineages.sort()\n",
     "    dataset = []\n",
-    "    def get_dataset(lower, upper):\n",
-    "        for lineage in lineages[lower:upper]:\n",
+    "    def get_dataset():\n",
+    "        for lineage in lineages:\n",
     "            dataset.append((lineage, covid19_genome.getLocalAccessionsPath(lineage)))\n",
     "        return dataset\n",
     "\n",
@@ -101,9 +76,19 @@
     "        DatasetName.testset.name: 0.1\n",
     "    }\n",
     "\n",
-    "    dataset = get_dataset(0, 200)\n",
-    "    model = Model(\"covid19-new-1024examples\")\n",
+    "    dataset = get_dataset()\n",
+    "    model = Model(model_name)\n",
     "    model.create_datasets(model.get_ds_types()[0], dataset, portions)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After you have created the model, and created its datasets. You can check which neural network structures is available. You can do that by calling the model class function ```get_ml_model_structure()```.\n",
+    "\n",
+    "After you see all the ml_model structures available in the system, you can check which hyper parameters are needed to define each and every ml_model structure. This is done by calling the model class function ```get_ml_model_structure_hps()```. The ```get_ml_model_structure_hps()``` will return which hps are required, and what it their type."
    ]
   },
   {
@@ -112,10 +97,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.get_ml_model_structures()\n",
-    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[0]))\n",
-    "print(\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")\n",
+    "print(model.get_ml_model_structures())\n",
+    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[0]))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also see which properties help define the current type of dataset by calling to the model class function ```get_ds_props()``` This function could be called only after the dataset have been succesfully created. This function will return the properties of the dataset as well as their values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(model.get_ds_props())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A use case of the system with the VitStructure model and the minhash genome datasets (a.k.a. mh_genome_ds).\n",
+    "\n",
+    "In the mh_genome_ds the coverage is a dataset property that sets the genome coverage rate.\n",
+    "\n",
+    "In the VitStructure, the model_depth is the number of transformer encoders.\n",
+    "\n",
+    "In this example use-case these two parameters will help us define a neural network that will be trained on the dataset (with the current coverage rate)"
    ]
   },
   {
@@ -141,12 +155,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[0]))"
+    "#### Adding a new neural network\n",
+    "\n",
+    "In this cell we will create an ml_model with the required hps (and also optional) as outputted earlier."
    ]
   },
   {
@@ -230,15 +245,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Setting dataset batch size and training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "319/534 [================>.............] - ETA: 1:36 - loss: 0.7207 - accuracy: 0.8147 - auc: 0.9931"
+      "  8/534 [..............................] - ETA: 4:33 - loss: 0.8572 - accuracy: 0.7715 - auc: 0.9904"
      ]
     }
    ],
@@ -249,92 +272,6 @@
     "# model.set_deletion_rate(0.015)\n",
     "model.set_ds_batch_size(256)\n",
     "model.train(ml_model_name, epochs=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = model.predict_reads(ml_model_name, \"../genome_builder/data/new-reads-4x/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "covid19_genome = Covid19Genome()\n",
-    "lineages = covid19_genome.getLocalLineages(1024)\n",
-    "lineages.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "accession_to_lineage_map = {}\n",
-    "for lineage in lineages:\n",
-    "    accessions = covid19_genome.getLocalAccessions(lineage)\n",
-    "    for accession in accessions:\n",
-    "        accession_to_lineage_map.update({accession.split(\"/\")[-1].split(\".\")[0]: lineage})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "correct = 0\n",
-    "incorrect = 0\n",
-    "labels = model.datasets[\"trainset\"].get_labels()\n",
-    "for result in results:\n",
-    "    # print(tf.math.top_k(results[result],  k = 1))\n",
-    "    result_index = tf.math.top_k(results[result],  k = 1).indices.numpy()[0][0]\n",
-    "    print(labels[result_index])\n",
-    "    reads_accession = result.split(\"/\")[-1].split(\".\")[0].split(\"-\")[0]\n",
-    "    if reads_accession not in accession_to_lineage_map:\n",
-    "        continue\n",
-    "    print(f\"real result: {accession_to_lineage_map[reads_accession]}\")\n",
-    "    \n",
-    "    if labels[result_index] == accession_to_lineage_map[reads_accession]:\n",
-    "        correct += 1\n",
-    "    else:\n",
-    "        incorrect += 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"accurcay = {correct / (correct + incorrect)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incorrect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ml_model_name"
    ]
   },
   {
