Changing names of model dataset functionalities

--- a/models/covid.ipynb
+++ b/models/covid.ipynb
@@ -245,6 +245,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.update_ds_props({\n",
+    "    \"coverage\": 4\n",
+    "})"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -261,15 +272,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  8/534 [..............................] - ETA: 4:33 - loss: 0.8572 - accuracy: 0.7715 - auc: 0.9904"
+      "534/534 [==============================] - 364s 668ms/step - loss: 0.7241 - accuracy: 0.8150 - auc: 0.9931 - val_loss: 0.6365 - val_accuracy: 0.8465 - val_auc: 0.9925\n",
+      "Epoch 2/1000\n",
+      " 94/534 [====>.........................] - ETA: 4:24 - loss: 0.7159 - accuracy: 0.8157 - auc: 0.9934"
      ]
     }
    ],
    "source": [
-    "# model.set_coverage(coverage)\n",
-    "# model.set_substitution_rate(0.025)\n",
-    "# model.set_insertion_rate(0.015)\n",
-    "# model.set_deletion_rate(0.015)\n",
     "model.set_ds_batch_size(256)\n",
     "model.train(ml_model_name, epochs=1000)"
    ]
