Adding the Irene Structure architecture and fixing bug in transfering untrainable layer.

--- a/models/covid_train2.ipynb
+++ b/models/covid_train2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,21 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['VitStructure']\n",
-      "{'d_model': 'required', 'd_val': 'required', 'd_key': 'required', 'd_ff': 'required', 'heads': 'required', 'dropout_rate': 'optional', 'regularizer': 'optional', 'initializer': 'optional', 'activation': 'optional', 'encoder_repeats': 'required', 'labels': 'required'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(model.get_ml_model_structures())\n",
-    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[0]))"
+    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[1]))"
    ]
   },
   {
@@ -120,17 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'coverage': 4, 'substitution_rate': 0.005, 'insertion_rate': 0.025, 'deletion_rate': 0.025, 'read_length': 128, 'frag_len': 128, 'num_frags': 256}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(model.get_ds_props())"
    ]
@@ -151,18 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "coverage = 2\n",
-    "ml_model_depth = 2\n",
+    "ml_model_depth = 1\n",
     "sequencer_instrument = \"pacbio\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +175,10 @@
     "def get_model_name(ml_model_depth, coverage, sequencer_instrument):\n",
     "    if not sequencer_instrument in sequencer_instrument_to_error_profile_map:\n",
     "        raise Exception(f\"Invalid sequencer instrument: {sequencer_instrument}\")\n",
-    "    return f\"vit.{ml_model_depth}.{coverage}x.{sequencer_instrument}\"\n",
+    "    return f\"irene.{ml_model_depth}.{coverage}x.{sequencer_instrument}\"\n",
     "\n",
-    "ml_model_name = get_model_name(ml_model_depth, coverage, sequencer_instrument)"
+    "ml_model_name = get_model_name(ml_model_depth, coverage, sequencer_instrument)\n",
+    "print(ml_model_name)"
    ]
   },
   {
@@ -209,14 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "newly_added = True\n",
+    "# model.remove_ml_model(ml_model_name)\n",
     "try:\n",
     "    model.add_ml_model(ml_model_name, hps={\n",
-    "        \"structure\": model.get_ml_model_structures()[0],\n",
+    "        \"structure\": model.get_ml_model_structures()[1],\n",
     "        \"d_model\": model.get_ds_props()[\"frag_len\"],\n",
     "        \"d_val\": 128,\n",
     "        \"d_key\": 128,\n",
@@ -237,7 +222,7 @@
     "                \"l2\": 0.0001\n",
     "            }\n",
     "        },\n",
-    "        \"dropout\": 0.2,\n",
+    "        \"dropout_rate\": 0.1,\n",
     "    })\n",
     "except:\n",
     "    newly_added = False\n",
@@ -246,17 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['vit.2.4x.pacbio', 'vit.2.1x.illumina', 'vit.1.4x.roche', 'vit.2.4x.roche', 'vit.2.2x.pacbio', 'vit.2.2x.roche', 'vit.2.1x.roche', 'vit.2.4x.illumina', 'vit.3.1x.illumina', 'vit.1.4x.illumina']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "models = model.list_ml_models()\n",
     "print(models)"
@@ -264,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,31 +254,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-08-31 21:33:53.794933: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:606] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
-      "2023-08-31 21:33:53.888854: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:432] Loaded cuDNN version 8600\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# model.change_ml_hps(ml_model_name, {\n",
-    "#     \"regularizer\": {\n",
-    "#         \"name\": \"l2\",\n",
-    "#         \"params\": {\n",
-    "#             \"l2\": 0.00005,\n",
-    "#         },\n",
-    "#     },\n",
-    "#     \"optimizer\": {\n",
-    "#         \"name\": \"AdamW\",\n",
-    "#         \"params\": {\n",
-    "#             \"learning_rate\": 0.0002,\n",
-    "#         },\n",
-    "#     },\n",
-    "# })"
+    "model.change_ml_hps(ml_model_name, {\n",
+    "    # \"regularizer\": {\n",
+    "    #     \"name\": \"l2\",\n",
+    "    #     \"params\": {\n",
+    "    #         \"l2\": 0.00005,\n",
+    "    #     },\n",
+    "    # },\n",
+    "    \"optimizer\": {\n",
+    "        \"name\": \"AdamW\",\n",
+    "        \"params\": {\n",
+    "            \"learning_rate\": 0.005,\n",
+    "        },\n",
+    "    },\n",
+    "})"
    ]
   },
   {
@@ -314,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,19 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1000\n"
+      "534/534 [==============================] - 757s 1s/step - loss: 5.2331 - accuracy: 0.0059 - auc: 0.4992 - val_loss: 5.1922 - val_accuracy: 0.0060 - val_auc: 0.5010\n",
+      "Epoch 2/1000\n",
+      "534/534 [==============================] - 740s 1s/step - loss: 5.1544 - accuracy: 0.0082 - auc: 0.5158 - val_loss: 4.9365 - val_accuracy: 0.0153 - val_auc: 0.6454\n",
+      "Epoch 3/1000\n",
+      "534/534 [==============================] - 741s 1s/step - loss: 4.4732 - accuracy: 0.0207 - auc: 0.7833 - val_loss: 4.2372 - val_accuracy: 0.0274 - val_auc: 0.8258\n",
+      "Epoch 4/1000\n",
+      "488/534 [==========================>...] - ETA: 1:00 - loss: 4.0354 - accuracy: 0.0338 - auc: 0.8614"
      ]
     }
    ],
    "source": [
-    "model.set_ds_batch_size(320)\n",
+    "model.set_ds_batch_size(256)\n",
     "model.train(ml_model_name, epochs=1000)"
    ]
   },
